[metadata]
name = path-homology-toolkit
version = file: path_homology/version.txt
author = Maksim Nekrashevich
author_email = mvnekrashevich@edu.hse.ru
description = Algorithm for computing path homology
url = https://github.com/max-nekrashevich/path-homology-toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 1 - Production/Alpha
    Operating System :: POSIX :: Linux
    Intended Audience :: Science/Research
    Environment :: Other Environment
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = path_homology
python_requires = >=3.8
install_requires = numpy

[options.extras_require]
finite_fields = galois